Fix button layout issue in SelectionListPageComponent.

--- a/deb/openmediavault/workbench/src/app/core/components/intuition/selection-list-page/selection-list-page.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/selection-list-page/selection-list-page.component.scss
@@ -4,7 +4,8 @@
   margin: $omv-margin;
 
   .mat-card-actions {
-    padding: unset $omv-padding * 0.5 $omv-padding * 0.5;
+    margin: 0;
+    padding: 0;
   }
 
   ::ng-deep .mat-selection-list {
